2004-03-10  Malcolm Purvis <malcolmpurvis@optushome.com.au>  (tiny change)

	* spam-stat.el (spam-stat-coding-system): Use mm-coding-system-p.

2004-03-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-complicated-handles): New function reviving
	former definition of mm-multiple-handles.

	* gnus-art.el (gnus-mime-save-part-and-strip): Use it.
	(gnus-mime-delete-part): Use it.

2004-03-09  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-agent-read-local): Bind
	nnheader-file-coding-system to gnus-agent-file-coding-system to
	avoid the implicit assumption that they will always be equal.
	(gnus-agent-save-local): Bind buffer-file-coding-system, not
	coding-system-for-write, as the with-temp-file macro first prints
	to a buffer then saves the buffer.

2004-03-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-edit-part): New function.
	(gnus-mime-save-part-and-strip): Use it; do query instead of
	signaling an error; don't use mm-multiple-handles.
	(gnus-mime-delete-part): Ditto.

2004-03-08  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-agent-read-agentview): Removed support for
	old file versions.
	(gnus-group-prepare-hook): Removed function that converted list
	form of gnus-agent-expire-days to group properties.

	* gnus-int.el: Autoload gnus-agent-regenerate-group.
	(gnus-request-accept-article): Re-indented.

	* gnus-start.el (gnus-convert-old-newsrc): Registered new
	converters to handle old agent file formats.  Added logic for a
	"backup before upgrading warning".
	(gnus-convert-mark-converter-prompt): Developers can mark
	functions as needing (default), or not needing,
	gnus-convert-old-newsrc's "backup before upgrading warning".
	(gnus-convert-converter-needs-prompt): Tests whether the user
	should be protected from potentially irreversable changes by the
	function.

	* legacy-gnus-agent.el (): New. Provides converters that are only