@@ -1,3 +1,14 @@
+2004-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-article-read-summary-keys): Restore new
+	window-start and hscroll to summary window.
+
+2004-03-12  Kevin Greiner <kgreiner@xpediantsolutions.com>
+
+	* gnus-start.el (gnus-convert-old-newsrc): Only write the
+	conversion message to newsrc-dribble when an actual conversion is
+	performed.
+
 2004-03-10  Malcolm Purvis <malcolmpurvis@optushome.com.au>  (tiny change)
 
 	* spam-stat.el (spam-stat-coding-system): Use mm-coding-system-p.
